css/icc.css
/* Full Page Tabs */

/* Style tab links */
.tablink {
    font-family: 'SG_0';
    font-weight: bold;
    background-color: #555;
    color: white;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    font-size: 16px;
    width: 25%;
}

.tablink:hover {
    background-color: #666;
}

/* Style the tab content (and add height:100% for full page content) */
.tabcontent {
    font-size: 18px;
    color: white;
    display: none;
    padding: 60px 20px;
    height: 100%;
}

#Home {
    background-color: #777;
}

#News {
    background-color: #777;
}

#Contact {
    background-color: #777;
}

#About {
    background-color: #777;
}

/* Full Page Tabs */

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 2; /* Sit on top */
    padding-top: 10px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0, 0, 0); /* Fallback color */
    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
    position: relative;
    background-color: #fefefe;
    margin: auto;
    padding: 0;
    border: 1px solid #888;
    width: 95%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s
}

/* Add Animation */
@-webkit-keyframes animatetop {
    from {
        top: -300px;
        opacity: 0
    }
    to {
        top: 0;
        opacity: 1
    }
}

@keyframes animatetop {
    from {
        top: -300px;
        opacity: 0
    }
    to {
        top: 0;
        opacity: 1
    }
}

/* The Close Button */
.close {
    color: white;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

.modal-header {
    padding: 2px 16px;
    background-color: #5cb85c;
    color: white;
}

.modal-body {
    padding: 2px 16px;
}

.modal-footer {
    padding: 2px 16px;
    background-color: #5cb85c;
    color: white;
}

/* Customize the label (the container) */
.container2 {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    cursor: pointer;
    font-size: 18px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* Hide the browser's default checkbox */
.container2 input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
}

/* Create a custom checkbox */
.checkmark2 {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: #eee;
}

/* On mouse-over, add a grey background color */
.container2:hover input ~ .checkmark2 {
    background-color: #ccc;
}

/* When the checkbox is checked, add a blue background   #2196F3*/
.container2 input:checked ~ .checkmark2 {
    background-color: #4CAF50;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark2:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the checkmark when checked */
.container2 input:checked ~ .checkmark2:after {
    display: block;
}

/* Style the checkmark/indicator */
.container2 .checkmark2:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

/* Customize the label (the container) */
.container1 {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    cursor: pointer;
    font-size: 18px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* Hide the browser's default radio button */
.container1 input {
    position: absolute;
    opacity: 0;
}

/* Create a custom radio button */
.checkmark1 {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: #eee;
    border-radius: 50%;
}

/* On mouse-over, add a grey background color */
.container1:hover input ~ .checkmark1 {
    background-color: #ccc;
}

/* When the radio button is checked, add a blue background */
.container1 input:checked ~ .checkmark1 {
    background-color: #4CAF50;
}

/* Create the indicator (the dot/circle - hidden when not checked) */
.checkmark1:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the indicator (dot/circle) when checked */
.container1 input:checked ~ .checkmark1:after {
    display: block;
}

/* Style the indicator (dot/circle) */
.container1 .checkmark1:after {
    top: 9px;
    left: 9px;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background: white;
}

.slider {
    -webkit-appearance: none;
    width: 100%;
    height: 15px;
    border-radius: 5px;
    background: #d3d3d3;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
}

.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #4CAF50;
    cursor: pointer;
}

.slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: #4CAF50;
    cursor: pointer;
}

@font-face {
    font-family: 'SG_0';
    src: url('../font/SG_0.ttf');
}

body {
    font-family: 'SG_0';
    font-size: 15px;
    font-weight: bold;
<!-- Baumans -->
}

#numberpad {
    width: 240px;
    height: 400px;
    text-align: center;
    position: relative;
    top: -420px;
    left: -50px;
    margin: 30px auto;
}

#numberpad img {
    height: 40px;
}

.btn-calc {
    float: left;
    position: relative;
    background: #EEEEEE;
    height: 60px;
    width: 60px;
    border-radius: 5px;
    margin: 10px;
    font-size: 15px;
    box-shadow: 5px 5px 5px grey;
}

.btn-calc:active {
    transform: translateY(4px) translateX(4px);
}

#bar-accuracy-frame {
    background: white;
    border: 1px solid #000000;
    height: 150px;
    width: 40px;
    position: absolute;
    top: -80px;
    left: 290px;
}

#bar-accuracy {
    height: 150px;
    width: 40px;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 0;
}

#bar-right-wrong {
    background: white;
    border: 1px solid #000000;
    height: 150px;
    width: 40px;
    position: absolute;
    top: -80px;
    left: 240px;
}

#percentage-right {
    background: green;
    height: 0;
    width: 40px;
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 0;
}

#percentage-wrong {
    background: red;
    height: 0;
    width: 40px;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 0;
}

.digit {
    float: left;
    position: relative;
    background: #FFFFFF;
    height: 40px;
    width: 21px;
    border-radius: 5px;
    margin: 1px;
    padding: 1px;
    font-size: 15px;
    left: 30px;
    top: -15px;
}

#btn-solve {
    width: 120px;
    height: 120px;
    position: relative;
    top: -670px;
    left: 220px;
}

#btn-solve img {
    height: 100px;
}

#status {
    width: 400px;
    height: 220px;
    margin: 1px auto;
    text-align: center;
    position: relative;
    top: 0;
}

#SF {
    background: #FFFFFF;
    border-top-left-radius: 40px 20px;
    border-top-right-radius: 40px 20px;
    border-bottom-left-radius: 20px 40px;
    border-bottom-right-radius: 20px 40px;
    width: 400px;
    height: 160px;
    position: relative;
    padding: 10px;
    top: -20px;
    left: -15px;
    border: 2px solid #000000;
    margin: 30px auto;
    text-align: left;
    box-shadow: 5px 5px 5px grey;
}

#SF #btn-menu {
    height: 20px;
    width: 20px;
    position: absolute;
    top: 5px;
    left: 10px;
    z-index: 1;
    font-size: 25px;
}

#SF .logo {
    height: 200px;
    width: 100px;
    position: relative;
    bottom: -40px;
    left: -5px;
}

#SF .logo img {
    height: 120px;
}

#SF .text {
    height: 225px;
    width: 330px;
    position: relative;
    top: -215px;
    left: 75px;
    font-size: 18px;
}

#display-frame {
    border-top-left-radius: 40px 20px;
    border-top-right-radius: 40px 20px;
    border-bottom-left-radius: 20px 40px;
    border-bottom-right-radius: 20px 40px;
    font-size: 20px;
    background: #FFFFFF;
    width: 400px;
    height: 80px;
    position: relative;
    top: -70px;
    border: 15px solid #000000;
    margin: 30px auto;
    text-align: center;
    box-shadow: inset 15px 10px 10px grey;
}

#display-frame .version {
    color: white;
    font-size: 10px;
    margin: 0 auto;
    margin-top: 32px;
}

#display {
    width: 400px;
    height: 50px;
    position: relative;
    top: 40px;
    margin-left: auto;
    margin-right: auto;
}

#controls {
    width: 300px;
    height: 240px;
    position: relative;
    margin-left: auto;
    margin-right: auto;
}

#bar-timeleft-frame {
    background: white;
    border: 1px solid #000000;
    width: 20px;
    height: 300px;
    position: relative;
    top: -80px;
    left: -50px;
}

#bar-timeleft {
    background: green;
    height: 300px;
    width: 20px;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 0;
}

#start {
    position: absolute;
    left: 50%;
    width: 400px;
    margin-left: -200px;
    height: 640px;
    text-align: center;
    font-size: 16px;
    background: #EEEEEE;
    z-index: 10;
    opacity: 1;
    border-radius: 10px;
    border: 2px solid #000000;
    box-shadow: 10px 10px 10px grey;
}

#start .logo {
    height: 400px;
}

#results {
    visibility: hidden;
    position: absolute;
    left: 50%;
    width: 400px;
    margin-left: -200px;
    height: 640px;
    text-align: center;
    font-size: 16px;
    background: #EEEEEE;
    z-index: 10;
    opacity: 1;
    border-radius: 10px;
    border: 2px solid #000000;
    box-shadow: 10px 10px 10px grey;
}

#results .logo {
    height: 200px;
    width: 100px;
    position: relative;
    top: 200px;
    left: 20px;
}

#results .logo img {
    height: 400px;
}

#results .headline {
    position: absolute;
    top: 20px;
    left: 100px;
    font-size: 100px;
}

#results .text {
    position: absolute;
    top: 150px;
    left: 25px;
}

#results .headline-statistics {
    font-size: 22px;
    position: absolute;
    top: 300px;
    left: 220px;
}

#results #statistics {
    position: absolute;
    top: 330px;
    left: 130px;
}

.solution {
    height: 50px;
    position: absolute;
    top: 20px;
    text-align: center;
    opacity: 0;
    background: #EEEEEE;
    border-radius: 10px;
    z-index: 1;
    font-size: 45px;
}

#footer {
    width: 360px;
    height: 50px;
    text-align: center;
    position: relative;
    top: 0;
    margin: 0 auto;
}

#footer .img-cc-by-sa {
    width: 100px;
    height: 35px;
}

#footer .img-ger {
    width: 30px;
    height: 18px;
}

#footer .version {
    font-size: larger;
    font-weight: bold;
}

